--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ PCB/Project Logs for CMD3_KIT/
 Project Outputs for CMD3_KIT/
 db/
 incremental_db/
+output_files/
+Software/Quartus_exp/output_files/
