--- a/Software/Quartus_exp/example_1.qsf
+++ b/Software/Quartus_exp/example_1.qsf
@@ -51,9 +51,6 @@ set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
 set_global_assignment -name SMART_RECOMPILE OFF
-set_global_assignment -name SYSTEMVERILOG_FILE ../lib/Shiftreg.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../lib/Counter.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../lib/EdgeSensingSV.sv
-set_global_assignment -name AHDL_FILE ../lib/Edge_Sensing_Sync.tdf
+set_global_assignment -name SYSTEMVERILOG_FILE ../lib/Modules/Arbiter.sv
 set_global_assignment -name SYSTEMVERILOG_FILE example_1.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
