--- a/Software/Quartus_exp/example_1.qsf
+++ b/Software/Quartus_exp/example_1.qsf
@@ -53,4 +53,5 @@ set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
 set_global_assignment -name SMART_RECOMPILE OFF
 set_global_assignment -name SYSTEMVERILOG_FILE ../lib/Modules/Arbiter.sv
 set_global_assignment -name SYSTEMVERILOG_FILE example_1.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../lib/Modules/Arbiter1.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
